--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fontovi.css">
     <link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="stil.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -43,7 +44,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link text" id="dodaj_recept" href="#"></a>
+              <a class="nav-link text" id="dodaj_recept" href="dodaj_recept.html"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text" id="moj_nalog" href="moj_nalog.html"></a>
@@ -63,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12" style="text-align: center;">
-            <h1 class="color_text2 text" id="poruka_dobrodoslice" style="font-size: 50px"></h1>
+            <h1 class="color_text2 text" id="poruka_dobrodoslice" style="font-size: 70px"></h1>
           </div>
         </div>
       </div>
