Added moj nalog

--- a/dodaj_recept.html
+++ b/dodaj_recept.html
@@ -184,7 +184,7 @@
             }
             niz_recepata.push(recept);
             localStorage.setItem('niz_recepata',JSON.stringify(niz_recepata));
-            $("#uspeh").text(reci["uspesno_dodat"]);
+            window.open("dodaj_recept.html","_self");
         })
     })
 </script>
