--- a/moj_nalog.html
+++ b/moj_nalog.html
@@ -20,11 +20,22 @@
     {
         text-align: center;
         font-weight: bold;
+        border-bottom: 2px solid #080F0F;
     }
     a:hover
     {
         color: #080F0F;
         text-decoration: none;
+    }
+    th
+    {
+      text-align: center;
+    }
+    button
+    {
+      margin-top: -5px;
+      margin-left: 10px;
+      color: #EFF2C0 !important;
     }
 </style>
 <body class="color_ternary">
@@ -81,17 +92,77 @@
               <h1 class="text color_text1" id="naslov_moj_nalog"></h1><hr style="border: 2px solid black;">
             </div>
         </div>
+        <div class="row">
+          <div class="col-12">
+            <table class="table table-striped" id="tabelica">
+              <thead style="background-color: rgba(0, 0, 0, 0.5);">
+                <tr>
+                  <th class="text" id="naslov"></th>
+                  <th class="text" id="duzina"></th>
+                  <th class="text" id="tip"></th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody id="bodi">
+
+              </tbody>
+            </table>
+          </div>
+        </div>
     </div>
 </body>
 <script>
     $(document).ready(function()
     {
+        let button_string1 = "<button class='btn color_primary' id='dugmic"
+        let button_string2 = "'>";
+        let button_string3 = "</button>";
         setupLanguage();
         if (localStorage.getItem('korisnik')==null)
         {
           localStorage.setItem('error',true);
           window.open('login.html',"_self");
         }
+        let niz_recepata=[];
+        if (localStorage.getItem('niz_recepata')==null)
+        {
+            localStorage.setItem('niz_recepata',JSON.stringify(niz_recepata));
+        }
+        niz_recepata = JSON.parse(localStorage.getItem('niz_recepata'));
+        for (let i=0;i<niz_recepata.length;i++)
+        {
+          let nes = niz_recepata[i];
+          if (nes.autor==localStorage.getItem('korisnik'));
+          let red = $("<tr></tr>");
+          let t1 = $("<td></td>");
+          t1.text(nes.naslov);
+          red.append(t1);
+          let t2 = $("<td></td>");
+          t2.text(nes.duzina);
+          red.append(t2);
+          let t3 = $("<td></td>");
+          let tip=null;
+          if (nes.grupa==1) tip=reci["predjelo"];
+          else if (nes.grupa==2) tip=reci["glavno_jelo"];
+          else if (nes.grupa==3) tip=reci["desert"];
+          else if (nes.grupa==4) tip=reci["uzina"];
+          t3.text(tip);
+          red.append(t3);
+          let t4 = $("<td></td>");
+          t4.append($(button_string1 + i + button_string2 + reci["izbrisi"] + button_string3));
+          red.append(t4);
+          $("#bodi").append(red);
+        }
+
+        $("button").click(function()
+        {
+          let id = $(this).attr('id');
+          var res = parseInt(id.substring(6, id.length));
+          let niz_recepata = JSON.parse(localStorage.getItem('niz_recepata'));
+          niz_recepata.splice(res, 1);
+          localStorage.setItem('niz_recepata',JSON.stringify(niz_recepata));
+          window.open("moj_nalog.html","_self");
+        })
     })
 </script>
 </html>
