Added map, fixed footer, added 3 recipes, fixes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link text" id="moj_nalog" href="moj_nalog.html"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text" id="o_nama" href="#"></a>
+              <a class="nav-link text" id="o_nama" href="about.html"></a>
             </li>
           </ul>
         </ul>
@@ -103,8 +103,8 @@
           </div>
         </div>
       </div>
-      <div class="row footer color_primary text" id="foot">
-        <div class="col-lg-12" style="text-align: left;">
+      <div class="row footer color_primary">
+        <div class="col-lg-12 text" style="text-align: left;" id="foot">
           
         </div>
       </div>
