--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
               <a class="nav-link text" id="moj_nalog" href="moj_nalog.html"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text" id="o_nama" href="#"></a>
+              <a class="nav-link text" id="o_nama" href="about.html"></a>
             </li>
           </ul>
         </ul>
@@ -105,6 +105,11 @@
                     </tr>
                 </table>
             </div>
+        </div>
+        <div class="row footer color_primary">
+          <div class="col-lg-12 text" style="text-align: left;" id="foot">
+            
+          </div>
         </div>
     </div>
 </body>
