--- a/dodaj_recept.html
+++ b/dodaj_recept.html
@@ -56,7 +56,7 @@
               <a class="nav-link text" id="moj_nalog" href="moj_nalog.html"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text" id="o_nama" href="#"></a>
+              <a class="nav-link text" id="o_nama" href="about.html"></a>
             </li>
           </ul>
         </ul>
@@ -135,6 +135,11 @@
                 &nbsp;
             </div>
         </div>
+        <div class="row footer color_primary">
+          <div class="col-lg-12 text" style="text-align: left;" id="foot">
+            
+          </div>
+        </div>
     </div>
 </body>
 <script>
@@ -153,6 +158,7 @@
             let naslov = $("input[name=naslov_t]").val();
             let duzina = $("input[name=duzina_t]").val();
             let grupa = $("select[name=grupa_t]").val();
+            let tezina = $("input[name=tezina_t]").val();
             if (grupa==reci["predjelo"]) grupa=1;
             else if (grupa==reci["glavno_jelo"]) grupa=2;
             else if (grupa==reci["desert"]) grupa=3;
@@ -176,6 +182,7 @@
                 "naslov" : naslov,
                 "duzina" : duzina,
                 "grupa" : grupa,
+                "tezina" : tezina,
                 "opis" : opis,
                 "url" : url,
                 "autor" : localStorage.getItem('korisnik'),
