--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="caret text" id="recepti" style="color: #EFF2C0;"></a>
               <ul class="dropdown-menu color_primary">
-                <li><a href="#" class="text" id="predjelo">Predjelo</a></li>
-                <li><a href="#" class="text" id="glavno_jelo">Glavno jelo</a></li>
-                <li><a href="#" class="text" id="desert">Dezert</a></li>
-                <li><a href="#" class="text" id="uzina">Uzina</a></li>
+                <li><a href="./view_all.html" class="text" id="predjelo" onclick="setShow(1)">Predjelo</a></li>
+                <li><a href="./view_all.html" class="text" id="glavno_jelo" onclick="setShow(2)">Glavno jelo</a></li>
+                <li><a href="./view_all.html" class="text" id="desert" onclick="setShow(3)">Dezert</a></li>
+                <li><a href="./view_all.html" class="text" id="uzina" onclick="setShow(4)">Uzina</a></li>
               </ul>
             </li>
             <li class="nav-item">
