--- a/about.html
+++ b/about.html
@@ -52,6 +52,9 @@
             <li class="nav-item">
               <a class="nav-link text" id="o_nama" href="#"></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link text" id="logout" href="#" onclick="logout()"></a>
+            </li>
           </ul>
         </ul>
         <div style="text-align: right;">
