--- a/view_all.html
+++ b/view_all.html
@@ -126,11 +126,11 @@
         let button_string2 = "'>";
         let button_string3 = "</button>";
         setupLanguage();
-        if (localStorage.getItem('korisnik')==null)
+        /*if (localStorage.getItem('korisnik')==null)
         {
           localStorage.setItem('error',true);
           window.open('login.html',"_self");
-        }
+        }*/
         let niz_recepata=default_recepti;
         if (localStorage.getItem('niz_recepata')==null)
         {
