--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
               <a class="nav-link text" id="moj_nalog" href="moj_nalog.html"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text" id="o_nama" href="#"></a>
+              <a class="nav-link text" id="o_nama" href="about.html"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text" id="logout" href="#" onclick="logout()"></a>
