--- a/dodaj_recept.html
+++ b/dodaj_recept.html
@@ -79,6 +79,9 @@
       </div>
     </div>
     <div class="container">
+      <div class="row">
+        <span class="col text" id="bread_dodaj"></span>
+      </div>
         <div class="row">
             <div class="col-12" style="text-align: center;">
               <h1 class="text color_text1" id="naslov_dodajRecept"></h1><hr style="border: 2px solid black;">
