--- a/moj_nalog.html
+++ b/moj_nalog.html
@@ -90,6 +90,11 @@
       </div>
     </div>
     <div class="container">
+      <div class="row">
+        <div class="col text" id="bread_moj_nalog">
+          
+        </div>
+      </div>
         <div class="row">
             <div class="col-12" style="text-align: center;">
               <h1 class="text color_text1" id="naslov_moj_nalog"></h1><hr style="border: 2px solid black;">
