--- a/view_one.html
+++ b/view_one.html
@@ -74,6 +74,9 @@
     </div>
     <div class="container">
       <div class="row">
+        <span class="col text" id="bread_pregled_s"></span>
+      </div>
+      <div class="row">
         <div class="col-12" style="text-align: center;">
           <h1 class="color_text1" id="naslov_recepta"></h1><hr style="border: 2px solid black;">
         </div>
@@ -172,6 +175,7 @@
     let niz_recepata = JSON.parse(localStorage.getItem('niz_recepata'));
     let recept = niz_recepata[recipe];
     $("#naslov_recepta").text(recept.naslov);
+    $("#bread_pregled_s").append(" > "+recept.naslov);
     $("#text_recepta").text(recept.opis);
     let image_string1 = '<div class="carousel-item active">';
     let image_string2 = '<img class="d-block w-100" src="'
@@ -198,7 +202,6 @@
     }
     avg /= recept.komentari.length;
     $("#score").append(Math.round(avg*100)/100);
-    
   })
 </script>
 </html>
