--- a/about.html
+++ b/about.html
@@ -74,6 +74,9 @@
     </div>
     <div class="container">
       <div class="row">
+        <span class="col text" id="bread_o"></span>
+      </div>
+      <div class="row">
         <div class="col-12" style="text-align: center;">
           <h1 class="text color_text1" id="naslov_o_nama"></h1><hr style="border: 2px solid black;">
           <span class="text color_text1" id="text_o_nama">
