Added comment and banner

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   {
     height: 300px !important;
   }
+  .col-4 img
+  {
+    width: 100%;
+    height: 230px;
+    padding-bottom: 10px;
+  }
 </style>
 <body class="color_ternary">
     <nav class="navbar navbar-expand-lg color_primary color_text2">
@@ -121,6 +127,19 @@
             </table>
         </div>
       </div>
+      <hr style="border: 2px solid black;">
+      <div class="row">
+        <div class="col-4">
+            <a href="https://www.gordonramsay.com/"><img src="GordonRamsey.jpg"></a>
+        </div>
+        <div class="col-4">
+          <a href="https://www.jamieoliver.com/"><img src="Jamie.webp"></a>
+        </div>
+        <div class="col-4">
+          <a href="https://en.wikipedia.org/wiki/Anthony_Bourdain"><img src="Anthony.jpg"></a>
+        </div>
+      </div>
+      <hr style="border: 2px solid black;">
       <div class="row footer color_primary">
         <div class="col-lg-12 text" style="text-align: left;" id="foot">
           
