--- a/view_one.html
+++ b/view_one.html
@@ -74,7 +74,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <span class="col text" id="bread_pregled_s"></span>
+        <span class="col text fensi" id="bread_pregled_s"></span>
       </div>
       <div class="row">
         <div class="col-12" style="text-align: center;">
