--- a/dodaj_recept.html
+++ b/dodaj_recept.html
@@ -80,7 +80,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <span class="col text" id="bread_dodaj"></span>
+        <span class="col text bred" id="bread_dodaj"></span>
       </div>
         <div class="row">
             <div class="col-12" style="text-align: center;">
