--- a/moj_nalog.html
+++ b/moj_nalog.html
@@ -91,7 +91,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col text" id="bread_moj_nalog">
+        <div class="col text bred" id="bread_moj_nalog">
           
         </div>
       </div>
